<resources>
    <string name="app_name">Student Carpooling</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Reset">Reset Password</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Description">Image of our App Logo</string>
    <string name="Name">Name</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="CreateTrip">Create a Trip</string>
    <string name="NewTrip">New Trip</string>
    <string name="Username">Username</string>
    <string name="surname">Surname</string>
    <string name="hint">Enter a message . . .</string>
    <string name="create_trip">Trip</string>
    <string name="profile">P</string>
    <string name="sendButton">Send Button</string>
    <string name="exitChat">Exit Chat</string>
    <string name="fullname">fullname</string>
    <string name="messages">M</string>
    <string name="my_trips">T</string>
    <string name="back">Back</string>
    <string name="Show">Show Password</string>
    <string name="Registration">Registration</string>
    <string name="navigation_drawer_open">Open Navigation Side Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Side Drawer</string>
    <string name="Domain">Domain Name</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="Age">Age</string>
    <string name="University">University</string>
    <string name="Retype">Retype Password</string>
    <string name="Driver">Driver</string>
    <string name="Rider">Rider</string>
    <string name="Messages">Messages</string>
    <string name="Manage">Manage Trips</string>
    <string name="SignOut">Sign Out</string>
    <string name="Delete">Delete Account</string>
    <string name="Help">Help</string>
    <string name="Contact">Contact Admins</string>
    <string name="AdminID">Sxddu8eOhEQVLnQwEjCiMiuRfrT2</string>
    <string-array name="CollegeDomains">
        <item>mail.dcu.ie</item>
        <item>tcd.ie</item>
        <item>nuigalway.ie</item>
        <item>nuim.ie</item>
        <item>ucc.ie</item>
        <item>ucd.ie</item>
        <item>ul.ie</item>
        <item>tcd.ie</item>
        <item>gmail.com</item>
    </string-array>
    <string-array name="no_seats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_driver">Driver</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_main">Home</string>
    <string name="title_activity_user_message">Messages</string>
    <string name="title_activity_driver_trips">My Trips</string>
    <string name="title_activity_driver_create">Create a Trip</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_passenger">Home</string>
    <string name="title_activity_find_trips">Find Trips</string>
    <string name="title_activity_passenger_trips">My Trips</string>
    <string name="title_activity_passenger_message">Messages</string>
    <string name="title_activity_passenger_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filtered_trips">Trip Results</string>
    <string name="title_activity_driver_trip_item">T </string>
    <string name="title_activity_passenger_trip_item">T </string>
    <string name="title_activity_driver_message">Active Chats</string>
    <string name="title_activity_request_map">Map</string>
    <string name="title_activity_user_location">Map</string>
    <string name="title_activity_passenger_create_requests">Trip Requests</string>
    <string name="title_activity_driver_find_requests">Find Requests</string>
    <string name="title_activity_passenger_location">Map</string>
    <string name="title_activity_start_trip">Map</string>
    <string name="title_activity_passenger_map">Map</string>
    <string name="google_maps_routes">AIzaSyCGNnh1lFiJ4mGCAdzJa50I77c2ITyGhnY</string>
    <string name="google_maps_places_key">AIzaSyBTJ-pUGMT8ypVgiyWqy0T_nSoT6z0bOIA</string>

</resources>
