<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"

            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:text="Registration"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:textColor="@color/quantum_white_100"
                android:id="@+id/text"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>



        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>




    <EditText
        android:id="@+id/NameInput"
        android:layout_width="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/Name"
        android:autofillHints="name"
        tools:targetApi="o"/>

    <EditText
    android:id="@+id/SurnameInput"
    android:layout_width="350dp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:inputType="text"
    android:hint="@string/Surname"
    android:autofillHints="surname"
    tools:targetApi="o"/>

    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:inputType="text"
        android:hint="@string/Username"
        android:autofillHints="Username"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/UniInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="text"
        android:hint="@string/University"
        android:autofillHints="university"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/AgeInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:autofillHints="age"
        android:hint="@string/Age"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        tools:targetApi="o"
        android:maxLength="2"
        />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
    android:id="@+id/EmailInput"
    android:layout_width="165dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:hint="@string/Email"
    android:autofillHints="email"
    tools:targetApi="o"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text=" @ "/>

    <AutoCompleteTextView
        android:hint="@string/Domain"
        android:layout_width="163dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:id="@+id/Domain"/>

    </LinearLayout>

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        tools:targetApi="o"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        />

    <RadioGroup
        android:id="@+id/GenderInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/Gender"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="2dp"

            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="90dp"
            android:layout_marginLeft="5dp"

            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/Female" />

        <RadioButton
            android:id="@+id/Other"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Other"
            android:checked="true"/>



    </RadioGroup>

    <Button
        android:id="@+id/Register"
        android:textSize="20sp"
        android:textColor="@color/quantum_white_100"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Register"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"/>

</LinearLayout>