<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"

        >
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/Type"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/Driver"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        />



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@+id/Type"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:src="@drawable/logo"
        android:id="@+id/ProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />

    <TextView
        android:layout_below="@+id/ProfilePic"
        android:id="@+id/Username"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />


    <TextView
        android:layout_below="@+id/Username"
        android:id="@+id/Name"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_below="@+id/Name"
        android:id="@+id/College"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/University"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <RatingBar
        android:layout_below="@+id/College"
        android:id="@+id/rating"
        android:numStars="5"
        android:stepSize="0.1"
        android:clickable="false"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/rating"
        android:id="@+id/tripcount"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="0 carpools"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_below="@+id/tripcount"
        android:id="@+id/ratingText"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="You dont have any ratings yet"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

    <Button
        android:layout_below="@+id/ratingText"
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Report User"/>

</RelativeLayout>